# controlary

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  TODO  main.py  pyproject.toml
app/: events.py
app/charts/: cards_window.py  category_breakdown.py  category_month_views.py  comparison_refs.py  comprometimento_renda.py  debt_evolution.py  fluxo_acumulado.py  investment_evolution.py  investment_evolution_overview.py  investments_overview.py  invoice_evolution.py  invoices_history.py  plot_labels.py  (+4 more)
assets/: icon.icns
tests/: conftest.py  test_accounts_transfer.py  test_auditoria_financeira.py  test_calendar_service.py  test_calendar_upcoming_receivables.py  test_card_invoices_historico.py  test_cards_service.py  test_categories_service.py  test_category_month_views.py  test_dashboard_no_double_counting.py  test_dashboard_service.py  test_dashboard_view.py  test_debt_evolution_passado.py  test_events_bus.py  test_expense_totals_service.py  test_fixed_expenses_service.py  test_formatting_sort.py  test_income_months_receipt.py  test_income_paid_remaining.py  test_income_sources_avulsa_nome_repetido.py  test_income_sync_parcelas.py  test_installment_centavos.py  test_installment_months_service.py  test_investment_goals_service.py  test_investments_service.py  test_invoice_evolution_realizado.py  test_invoices_history.py  test_kpi_service.py  test_mes_ano.py  test_monthly_ledger_template.py  test_payment_destination.py  test_payments_service.py  test_renda_vs_despesa_chart.py  test_subscription_months_service.py  test_subscriptions_service.py  test_unit_of_work.py
(+116 files in other folders)
